changed the src of the logo img

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<!-- Introduces Application -->
 		<div id="heading" class="container">
-			<img src="../img/spotify-logo.png">
+			<img src="/img/spotify-logo.png">
 			<h1>SpotSearch</h1>
 			<p>This web application allows users to see the top 10 songs for an artist in the USA. After entering an artist's name, the application returns a list of the top 10 songs with samples of the track and a link to the artist's spotify page where they can learn more about them.</p>
 		</div>
